fix bug user and added docker file
